i have update the title of system and also transalate to dari

--- a/geonode/templates/v2/about.html
+++ b/geonode/templates/v2/about.html
@@ -32,8 +32,8 @@
 	        <p></p>
 	    </div>
 	    <hr>
-	    <p>{% trans "The Afghanistan Natural Hazard Data Center (ANHDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}</p>
-        <p>{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Natural Hazard Data Center (ANHDC) is the dissemination platform for DRR data and other baseline information. At present the AHNDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}</p>
+	    <p>{% trans "The Afghanistan Natural Hazards Data Center (ANHDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}</p>
+        <p>{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Natural Hazards Data Center (ANHDC) is the dissemination platform for DRR data and other baseline information. At present the AHNDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}</p>
 	    <p>{% trans "The information provided on ANHDC are especially useful in regards to prediction, emergency response, M&E and planning purposes." %}</p>
 	    <hr>
 
