--- a/geonode/templates/v2/training.html
+++ b/geonode/templates/v2/training.html
@@ -80,7 +80,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h3>{% trans "Videos" %}</h3>
-				<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazard Data Center(anhdc.andma.gov.af). The instruction videos can be found on YouTube and on the ASDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}</p>
+				<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazards Data Center(anhdc.andma.gov.af). The instruction videos can be found on YouTube and on the ASDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}</p>
 				<a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Go to Youtube Channel" %}</a>
 
 				<p>&nbsp;</p>
@@ -105,7 +105,7 @@
 
 		<div class="row">
 			<div class="col-md-6">
-				<h3>{% trans "Flood Hazard Analysis using Afghanistan Natural Hazard Data Center" %}</h3>
+				<h3>{% trans "Flood Hazard Analysis using Afghanistan Natural Hazards Data Center" %}</h3>
 				<p>{% trans "Created by: California University of Pennsylvania Students - Adam Wells, Gabrielle Salerni, John Beattie, and Janay Myers And Thomas R. Mueller, Ph.D., GISP Geography Professor" %}</p>
 				<p>{% trans "Give a structured overview and exercises for geospatial analysis using the AHNDC." %}</p>
 			</div>
