Revert "i have update the title of system and also transalate to dari"
This reverts commit d540da0696f14f6e84050e8543ceefbcabb04a23.

--- a/geonode/templates/v2/disclaimer.html
+++ b/geonode/templates/v2/disclaimer.html
@@ -30,14 +30,14 @@
 	    <h3>{% trans "Introduction" %}</h3>
 	    <p>{% trans "iMMAP in Afghanistan is funded by The United States Agency for International Development (USAID)/ Office of U.S. Foreign Disaster Assistance (OFDA)." %}
 	    <br>
-	    {% trans "The Afghanistan Natural Hazards Data Center is part of the iMMAP Disaster Risk Reduction (DRR) Program, which is a USAID/OFDA funded project to provide DRR relevant information and information management services to the humanitarian community in Afghanistan." %}</p>
+	    {% trans "The Afghanistan Natural Hazard Data Center is part of the iMMAP Disaster Risk Reduction (DRR) Program, which is a USAID/OFDA funded project to provide DRR relevant information and information management services to the humanitarian community in Afghanistan." %}</p>
 	    <p>&nbsp;</p>
 	    <ul class="disclaimer">
 	        <li>
 	            <span class="number pull-left">01</span>
 	            <div>
 	                <h4>{% trans "Data Disclaimer" %}</h4>
-	                <p>{% trans "The Afghanistan Natural Hazards Data Center Data/Maps were created by the iMMAP DRR program. Some flaws and limitations of the data are described in this document. However, a degree of error is inherent in all datasets, especially modelled maps and maps of dynamic events such as floods. Accordingly, the information is distributed &quot;AS-IS&quot; without warranties of any kind, either express or implied. iMMAP shall not accept any liability or warranties for damages incurring from the use of this data, including but not limited to warranties of suitability to a particular purpose or use. No attempt has been made in either the design or production of the data to define the limits or jurisdiction of any federal, state, or local government. The map is intended for use only at the published scale." %}</p>
+	                <p>{% trans "The Afghanistan Natural Hazard Data Center Data/Maps were created by the iMMAP DRR program. Some flaws and limitations of the data are described in this document. However, a degree of error is inherent in all datasets, especially modelled maps and maps of dynamic events such as floods. Accordingly, the information is distributed &quot;AS-IS&quot; without warranties of any kind, either express or implied. iMMAP shall not accept any liability or warranties for damages incurring from the use of this data, including but not limited to warranties of suitability to a particular purpose or use. No attempt has been made in either the design or production of the data to define the limits or jurisdiction of any federal, state, or local government. The map is intended for use only at the published scale." %}</p>
 	            </div>
 	        </li>
 	        <li>
@@ -64,7 +64,7 @@
 	            <span class="number pull-left">04</span>
 	            <div>
 	                <h4>{% trans "Citing and Reference" %}</h4>
-	                <p>{% trans "When using the data/maps or referring to it, the Afghanistan Natural Hazards Data Center should be referred to as following:" %}
+	                <p>{% trans "When using the data/maps or referring to it, the Afghanistan Natural Hazard Data Center should be referred to as following:" %}
 	                <br>
 	                {% trans "ASDC iMMAP (2016). Afghanistan Spatial Data Center. iMMAP 1300 Pennsylvania Avenue NW Suite 470 Washington, DC 20004 USA." %}
 	                </p>
