--- a/geonode/templates/v2/doc.html
+++ b/geonode/templates/v2/doc.html
@@ -32,7 +32,7 @@
 				<h3>{% trans "Documentation" %}</h3>
 				<p>{% trans "Please find the documentation on the right hand side. This is a living document and presently must be considered as draft. At present sections of flood forecasting and population estimates must be revised as these have been extensively updated and/or refined, as well as new functionalities must be added." %}
 				<br>
-				<br>{% trans 'Current Version: Documentation ANHDC (Afghanistan Natural Hazards Data Center)'  %}
+				<br>{% trans 'Current Version: Documentation ANHDC (Afghanistan Natural Hazard Data Center)'  %}
 				<br>{% trans 'Data and Methodologies - V0.9 - Emlyn Hagen, iMMAP (September 2016)' %}
 				<br>{% trans 'None of the items in this document can be copied or edited' %} </p>
 				<p>
@@ -64,7 +64,7 @@
 
 		<!-- <div class="row"> -->
 			<h3>{% trans "Videos" %}</h3>
-			<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazards Data Center(anhdc.andma.gov.af). The instruction videos can be found on YouTube and on the ANHDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}
+			<p>{% trans "To facilitate better communication, a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Natural Hazard Data Center(anhdc.andma.gov.af). The instruction videos can be found on YouTube and on the ANHDC (available in Dari and English). Currently, there are 11 training videos, in total 1 ½ hours of material." %}
 			</p>
 			<a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Go to Youtube Channel" %}</a>
 			<p>&nbsp;</p>
