--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -145,6 +145,7 @@
                             <li>
                                 <a href="{% url 'v2:training' %}">{% trans "Training" %}</a>
                             </li>
+                             
                             <!-- <li>
                                 <a href="404.html">404</a>
                             </li> -->
@@ -154,6 +155,9 @@
                             </li>
                             <li>
                                 <a href="{% url 'v2:disclaimer' %}">{% trans "Disclaimer" %}</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'v2:contactus' %}">{% trans "Contact us" %}</a>
                             </li>
                         </ul>
                     </li>
