--- a/geonode/templates/v2/contact.html
+++ b/geonode/templates/v2/contact.html
@@ -53,7 +53,7 @@
                  <div class="panel panel-primary">
                     <div class="panel-body">
                         <img src="{{ STATIC_URL }}v2/images/rahmani.png" class="img img-circle" style="width:50%; display:block; margin:auto;padding-bottom:1.6rem" ><hr>
-                        <p class="text-center"><strong>{% trans "Sayed Abdul Basit Rahmani" %}</strong></p>
+                        <p class="text-center"><strong>{% trans "Sayed Abdul Baset Rahmani" %}</strong></p>
                         <hr>
                         <p class="text-center">{% trans "Senior Adviser" %} </p><hr>
                         <p class="text-center">{% trans "State Ministry for Disaster Management and   Humanitarian Affairs /ANDMA" %}
