--- a/geonode/templates/account/password_reset_token.html
+++ b/geonode/templates/account/password_reset_token.html
@@ -7,6 +7,10 @@
 {% block head_title %}{% trans "Set your new password" %}{% endblock %}
 
 {% block body %}
+ <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
     <form method="POST" action="{% url "account_password_reset_token" uidb36=uidb36 token=token %}">
         <legend>{% trans "Set your new password" %}</legend>
         <fieldset>
@@ -17,4 +21,7 @@
             </div>
         </fieldset>
     </form>
+</div>
+</div>
+</section>
 {% endblock %}
